--- a/README
+++ b/README
@@ -6,6 +6,8 @@ Main configuration file [conf/videoserver.ini]:
     ffmpeg_start_timeout = 20
     ; seconds before killing FFmpeg process
     ffmpeg_stop_timeout = 10
+    ; whether to forward ffmpeg output directly to stderr
+    ffmpeg_debug_output = false
     live_dir = /home/shulgin/PycharmProjects/videoserver/live
     rec_dir = /home/shulgin/PycharmProjects/videoserver/rec
     keep_free_mb = 100
