--- a/README
+++ b/README
@@ -13,6 +13,7 @@ Main configuration file [conf/videoserver.ini]:
     keep_free_mb = 100
 
     [recording]
+    ; set to 0 in order to disable
     rec_keep_hours = 12
     segment_duration = 3600
 
